--- a/python_project/weather_datascience/rainfall/temperature_new.ipynb
+++ b/python_project/weather_datascience/rainfall/temperature_new.ipynb
@@ -363,20 +363,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-30-ee2328641150>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-1-2f2600a1a108>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-30-ee2328641150>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    can = file[file.Station Name == 'Cannanore']\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-2f2600a1a108>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    can = file[file.'Station Name == 'Cannanore']\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "can = file[file.Station Name == 'Cannanore']"
+    "can = file[file.'Station Name == 'Cannanore']"
    ]
   },
   {
